--- a/xFunc/xFunc.csproj
+++ b/xFunc/xFunc.csproj
@@ -244,6 +244,7 @@
       <Generator>PublicSettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Compile Include="ViewModels\BaseViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\Copy.png" />
