--- a/xFunc/packages.config
+++ b/xFunc/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Fluent.Ribbon" version="3.6.1.236" targetFramework="net40-client" />
+  <package id="ControlzEx" version="2.0.1.61" targetFramework="net40-client" />
+  <package id="Fluent.Ribbon" version="4.0.3.394" targetFramework="net40-client" />
 </packages>
