--- a/xFunc.Tests/xFunc.Tests.csproj
+++ b/xFunc.Tests/xFunc.Tests.csproj
@@ -74,7 +74,7 @@
     <Compile Include="Expressions\Maths\LogicalAndBitwise\EqualityTest.cs" />
     <Compile Include="Expressions\Maths\LogicalAndBitwise\ImplicationTest.cs" />
     <Compile Include="Expressions\Maths\LogicalAndBitwise\NAndTest.cs" />
-    <Compile Include="Expressions\Maths\LogicalAndBitwise\NorTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\NOrTest.cs" />
     <Compile Include="Expressions\Maths\LogicalAndBitwise\NotTest.cs" />
     <Compile Include="Expressions\Maths\LogicalAndBitwise\OrTest.cs" />
     <Compile Include="Expressions\Maths\LogicalAndBitwise\XOrTest.cs" />
