--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: csharp
 solution: xFunc (Libs for .Net 4.0).sln
 install:
   - nuget restore "xFunc (Libs for .Net 4.0).sln"
-  - nuget install xunit.runners -OutputDirectory testrunner
+  - nuget install xunit.runner.console -OutputDirectory testrunner
 script:
   - xbuild /p:Configuration=Release "xFunc (Libs for .Net 4.0).sln"
-  - mono ./testrunner/xunit.runners.*/tools/xunit.console.clr4.exe ./xFunc.Tests/bin/Release/xFunc.Tests.dll
+  - mono ./testrunner/xunit.runner.console.*/tools/xunit.console.exe ./xFunc.Tests/bin/Release/xFunc.Tests.dll
