--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,8 +2,9 @@ version: '{branch}{build}'
 pull_requests:
   do_not_increment_build_number: true
 configuration: Release
+before_build:
+- cmd: nuget restore xFunc.sln
 build:
   project: xFunc.sln
-  parallel: true
   verbosity: minimal
 deploy: off
