--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,9 +2,15 @@ version: '{branch}{build}'
 pull_requests:
   do_not_increment_build_number: true
 configuration: Release
+environment:
+  COVERALLS_REPO_TOKEN:
+    secure: YI6EFXDLg4sSRbxxqZdTI21IAWMt55JfDTTDpA6ljw7zq5UmXi9x5vbagzua5hqe
 before_build:
 - cmd: nuget restore xFunc.sln
 build:
   project: xFunc.sln
-  verbosity: minimal
+  verbosity: detailed
+after_build:
+- cmd: packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -output:coverage.xml -target:"packages\xunit.runner.console.2.1.0\tools\xunit.console.exe" -targetargs:"xFunc.Tests\bin\Release\xFunc.Tests.dll -nologo -noshadow" -filter:"+[xFunc.*]* -[xFunc.Tests*]* -[xFunc.*]*.Resource"
+- cmd: packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml
 deploy: off
