--- a/xFunc.Tests/packages.config
+++ b/xFunc.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="coveralls.io" version="1.3.4" targetFramework="net45" />
   <package id="OpenCover" version="4.6.519" targetFramework="net45" />
   <package id="ReportGenerator" version="2.4.5.0" targetFramework="net45" />
   <package id="xunit" version="2.1.0" targetFramework="net45" />
