--- a/xFunc.UnitConverters/xFunc.UnitConverters.csproj
+++ b/xFunc.UnitConverters/xFunc.UnitConverters.csproj
@@ -31,7 +31,7 @@
     <DocumentationFile>bin\Release\net40\xFunc.UnitConverters.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>..\key.pfx</AssemblyOriginatorKeyFile>
