--- a/xFunc/xFunc.csproj
+++ b/xFunc/xFunc.csproj
@@ -23,7 +23,7 @@
     <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>..\key.pfx</AssemblyOriginatorKeyFile>
