--- a/xFunc.Tests/xFunc.Tests.csproj
+++ b/xFunc.Tests/xFunc.Tests.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -71,6 +72,7 @@
     <Compile Include="Expressions\Maths\AbsTest.cs" />
     <Compile Include="Expressions\Maths\AddTest.cs" />
     <Compile Include="Expressions\Maths\BinaryTest.cs" />
+    <Compile Include="Expressions\Maths\ComplexNumberTest.cs" />
     <Compile Include="Expressions\Maths\DelTest.cs" />
     <Compile Include="Expressions\Maths\LogicalAndBitwise\AndTest.cs" />
     <Compile Include="Expressions\Maths\LogicalAndBitwise\EqualityTest.cs" />
