--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,8 +9,10 @@ before_build:
 - cmd: nuget restore xFunc.sln
 build:
   project: xFunc.sln
-  verbosity: detailed
+  verbosity: minimal
 after_build:
-- cmd: packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -output:coverage.xml -target:"packages\xunit.runner.console.2.1.0\tools\xunit.console.exe" -targetargs:"xFunc.Tests\bin\Release\xFunc.Tests.dll -nologo -noshadow" -filter:"+[xFunc.*]* -[xFunc.Tests*]* -[xFunc.*]*.Resource -[xFunc.*]*Exception"
-- cmd: packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml
+- cmd: >-
+    packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -output:coverage.xml -target:"packages\xunit.runner.console.2.1.0\tools\xunit.console.x86.exe" -targetargs:"xFunc.Tests\bin\Release\xFunc.Tests.dll -nologo -noshadow" -filter:"+[xFunc.*]* -[xFunc.Tests*]* -[xFunc.*]*.Resource"
+
+    packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml
 deploy: off
