--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,4 +15,5 @@ after_build:
     packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -output:coverage.xml -target:"packages\xunit.runner.console.2.1.0\tools\xunit.console.x86.exe" -targetargs:"xFunc.Tests\bin\Release\xFunc.Tests.dll -nologo -noshadow" -filter:"+[xFunc.*]* -[xFunc.Tests*]* -[xFunc.*]*.Resource"
 
     packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml
+test: off
 deploy: off
