--- a/xFunc.Maths/xFunc.Maths.csproj
+++ b/xFunc.Maths/xFunc.Maths.csproj
@@ -191,6 +191,7 @@
     <Compile Include="Results\StringResult.cs" />
     <Compile Include="Results\BooleanResult.cs" />
     <Compile Include="Tokens\BooleanToken.cs" />
+    <Compile Include="Tokens\ComplexNumberToken.cs" />
     <Compile Include="Tokens\Functions.cs" />
     <Compile Include="Tokens\FunctionToken.cs" />
     <Compile Include="Tokens\IToken.cs" />
