--- a/xFunc.Tests/xFunc.Tests.csproj
+++ b/xFunc.Tests/xFunc.Tests.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Expressions\Maths\AddTest.cs" />
     <Compile Include="Expressions\Maths\BinaryTest.cs" />
     <Compile Include="Expressions\Maths\ComplexNumbers\ComplexNumberTest.cs" />
+    <Compile Include="Expressions\Maths\ComplexNumbers\ConjugateTest.cs" />
     <Compile Include="Expressions\Maths\ComplexNumbers\MagnitudeTest.cs" />
     <Compile Include="Expressions\Maths\ComplexNumbers\PhaseTest.cs" />
     <Compile Include="Expressions\Maths\DelTest.cs" />
