--- a/xFunc.Maths/xFunc.Maths.csproj
+++ b/xFunc.Maths/xFunc.Maths.csproj
@@ -48,6 +48,7 @@
     <Compile Include="DefaultDependencyResolver.cs" />
     <Compile Include="Expressions\Ceil.cs" />
     <Compile Include="Expressions\ComplexNumbers\ComplexNumber.cs" />
+    <Compile Include="Expressions\ComplexNumbers\Conjugate.cs" />
     <Compile Include="Expressions\ComplexNumbers\Im.cs" />
     <Compile Include="Expressions\ComplexNumbers\Magnitude.cs" />
     <Compile Include="Expressions\ComplexNumbers\Phase.cs" />
