--- a/xFunc/app.config
+++ b/xFunc/app.config
@@ -115,6 +115,9 @@
             <setting name="DefaultChartColor" serializeAs="String">
                 <value>#FFFF0000</value>
             </setting>
+            <setting name="ComplexNumberExpanded" serializeAs="String">
+                <value>False</value>
+            </setting>
         </xFunc.Properties.Settings>
     </userSettings>
   <runtime>
