#153 added mod expression

--- a/xFunc.Tests/xFunc.Tests.csproj
+++ b/xFunc.Tests/xFunc.Tests.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Expressions\Maths\Matrices\MatrixTest.cs" />
     <Compile Include="Expressions\Maths\Matrices\TransposeTest.cs" />
     <Compile Include="Expressions\Maths\Matrices\VectorTest.cs" />
+    <Compile Include="Expressions\Maths\ModTest.cs" />
     <Compile Include="Expressions\Maths\MulTest.cs" />
     <Compile Include="Expressions\Maths\PowTest.cs" />
     <Compile Include="Expressions\Maths\ProductTest.cs" />
