--- a/xFunc/app.config
+++ b/xFunc/app.config
@@ -118,6 +118,9 @@
             <setting name="ComplexNumberExpanded" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="StatisticalExpanded" serializeAs="String">
+                <value>False</value>
+            </setting>
         </xFunc.Properties.Settings>
     </userSettings>
   <runtime>
